Simplify grammar token typing a bit